--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   firebase_auth: ^5.3.1
   cloud_firestore: ^5.4.3
   cupertino_icons: ^1.0.8
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
